# MyChat

./: Dockerfile  base.py  db.sqlite3  pyproject.toml  requirements.txt  save.bat
MyChat/: asgi.py  settings.py  urls.py
chat/: consumers.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_alter_message_date.py
chat/templates/: index.html
static/: base.css
templates/: base.html
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_friendship_status.py
users/templates/: change_password.html  code.html  code_email.html  login.html  request_friendship.html  reset_email.html  reset_password.html  signup.html  user_page.html
